--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </p>
         </div>
         <div class="me">
-          <img id='me' src="images/gordon.jpg" alt="Gordon">
+          <img id='me' src="images/gordon.JPG" alt="Gordon">
         </div>
     </div>
   </section>
@@ -101,7 +101,7 @@
     Feel free to reach out to me if you are curious about any of the projects I have worked on below</p>
     <div class="sect">
     <div class="pics">
-    <img class='square' src="images/logo.png" alt="logo of shower power">
+    <img class='square' src="images/logo.PNG" alt="logo of shower power">
     <div class="row">
     <a href="https://gt294.medium.com/save-the-world-one-shower-at-a-time-ideation-sprint-134ed1e75d3d">
     <img class='mini' src="images/medium.png" alt="medium logo">
@@ -165,7 +165,7 @@
      <img id='nb' class='square' src="images/jupyter.png" alt="logo of jupyter notebook">
      <div class="row">
        <a href="https://github.com/gt1974/Decades-Project/tree/main">
-     <img class='mini' src="images/Github.png" alt="github logo">
+     <img class='mini' src="images/GitHub.png" alt="github logo">
      </a>
      </div>
      </div>
