--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Personal Website</title>
+  <title>Gordon's Website</title>
   <link rel="stylesheet" type="text/css" href="style/style.css" media="all"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
   <script src="scripts/jquery-3.5.1.js" type="text/javascript"></script>
-  <script src="scripts/script.js" type="text/javascript" async></script>
+<!--  <script src="scripts/script.js" type="text/javascript" async></script> -->
 </head>
 <body>
   <div class="container">
@@ -38,7 +38,7 @@
     <div class="blurb">
       <div class="texts">
     <h1 id='title'>About Me</h1>
-    <p>Hi, my name is Gordon! Born and raised in Brookly NY, I am a first gen student at Cornell University
+    <p>Hi, my name is Gordon! Born and raised in Brooklyn NY, I am a first gen student at Cornell University
     beginning to venture into the tech industry. I am interested in interdisciplinary
     topics that combine tech, environmental science, and business.</p>
     <p>I am fueled by opportunities that give me the ability to shape
@@ -47,7 +47,7 @@
       problems in new innovative ways. Thus, Product Managing is a role I am particularly
       fascinated with and want to explore.</p>
     <p>During the last few months, I have been looking for new ways to gain the
-      skills needed to support my jounrney, as well as opportunities to gain experience
+      skills needed to support my journey, as well as opportunities to gain experience
       as a Product Manager.
     </p>
         </div>
