--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p>I am fueled by opportunities that give me the ability to shape
       technology that enables the world of social impact and also enables me to give back
       to the community. I consider myself a creative mind that is constantly looking to tackle
-      problems in new innovative ways. Thus, Product Managing is a role I am particularly
+      problems in new innovative ways. Thus, Product Management is a role I am particularly
       fascinated with and want to explore.</p>
     <p>During the last few months, I have been looking for new ways to gain the
       skills needed to support my journey, as well as opportunities to gain experience
@@ -52,7 +52,7 @@
     </p>
         </div>
         <div class="me">
-          <img id='me' src="images/gordon.JPG" alt="Gordon">
+          <img class='gord' src="images/gordon.JPG" alt="Gordon">
         </div>
     </div>
   </section>
@@ -64,9 +64,10 @@
         <li><strong>Major:</strong> Information Science Concentrating in Data Science</li>
         <li><strong>Age:</strong> 19</li>
         <li><strong>Hometown:</strong> Brooklyn, NY</li>
+        <li><strong>Languages:</strong> Cantonese, Italian</li>
         <li><strong>Hobbies:</strong> Painting, journaling, vlogging</li>
         <li><strong>Favorite Shows:</strong> Start Up, Umbrella Academy</li>
-        <li><strong>Languages:</strong> Cantonese, Italian</li>
+        <li><strong>Favorite Games:</strong> League of Legends, Maplestory</li>
         <li><strong>Dislikes:</strong> Coconut water</li>
       </ul>
     </div>
@@ -103,7 +104,7 @@
     <div class="pics">
     <img class='square' src="images/logo.PNG" alt="logo of shower power">
     <div class="row">
-    <a href="https://gt294.medium.com/save-the-world-one-shower-at-a-time-ideation-sprint-134ed1e75d3d">
+    <a href="https://gt294.medium.com/save-the-world-one-shower-at-a-time-ideation-sprint-134ed1e75d3d" target="_blank">
     <img class='mini' src="images/medium.png" alt="medium logo">
     </a>
     <a href="https://www.figma.com/file/GU08ydm2bJbrBU9sdsXsHi/ShoPo-Fall-2020?node-id=107%3A1120">
@@ -137,6 +138,11 @@
     </div>
   -->
     <p id='tag'>To learn more about this project, read <a href='https://gt294.medium.com/save-the-world-one-shower-at-a-time-ideation-sprint-134ed1e75d3d'>this Medium article</a> I wrote!</p>
+
+    </section>
+    <section>
+
+
     <div class="sect">
     <div class="pics">
     <img id='IA' class='square' src="images/IA.png" alt="logo of influencer analytics">
@@ -160,6 +166,9 @@
   I have also been working on designing and building the website for Influencer Analytics to share our story.</p>
      </div>
      </div>
+     </section>
+     <section>
+
      <div class="sect">
      <div class="pics">
      <img id='nb' class='square' src="images/jupyter.png" alt="logo of jupyter notebook">
@@ -185,43 +194,26 @@ For example, is there a clear relation between energy and loudness of songs in e
   </section>
 
   <section id='contact'>
-    <div class="basic">
-        <p>Here are some fun (or not so fun) facts about me:</p>
-      <ul>
-        <li><strong>School:</strong> Cornell University 2023</li>
-        <li><strong>Major:</strong> Information Science Concentrating in Data Science</li>
-        <li><strong>Age:</strong> 19</li>
-        <li><strong>Hometown:</strong> Brooklyn, NY</li>
-        <li><strong>Hobbies:</strong> Painting, journaling, vlogging</li>
-        <li><strong>Favorite Shows:</strong> Start Up, Umbrella Academy</li>
-        <li><strong>Languages:</strong> Cantonese, Italian</li>
-        <li><strong>Dislikes:</strong> Coconut water</li>
-      </ul>
-    </div>
-    <div class="skills">
-    <div class="facts">
-    <h3>Programming</h3>
-    <ul>
-      <li>Python</li>
-      <li>Java</li>
-      <li>Swift</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-      <li>Jupyter Notebook (Pandas, Numpy, Matplotlib)</li>
-    </ul>
-    </div>
-    <div class="facts">
-    <h3>PM Skills</h3>
-    <ul>
-      <li>Figma</li>
-      <li>Wireframing</li>
-      <li>Prototyping</li>
-      <li>User Research</li>
-      <li>Usability Testing</li>
-    </ul>
-    </div>
-    </div>
+    <h1 class="title">Contact</h1>
+    <div class="icons">
+      <a href="https://www.instagram.com/gordn.t">
+    <img class='larger' src="images/insta.png" alt="instagram">
+    </a>
+    <a href="https://github.com/gt1974">
+    <img class='larger' src="images/GitHub.png" alt="github">
+    </a>
+    <a href="https://www.linkedin.com/in/gordon-tran-2001/">
+    <img class='larger' src="images/linkedin.png" alt="linkedin">
+    </a>
+    <a href="mailto:gt294@cornell.edu">
+    <img class='larger' src="images/gmail.png" alt="linkedin">
+    </a>
+</div>
+<div class="end">
+<img class='gord' src="images/gordon2.jpg" alt="picture of gordon">
+<p id='reach'>If you have made it this far, I would love to connect with you. Please feel free to reach out to me! 
+  Easiest way would be to shoot me an email at gt294@cornell.edu</p>
+</div>
   </section>
   </div>
 </body>
