--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Personal Website</title>
+  <title>Gordon's Resume</title>
   <link rel="stylesheet" type="text/css" href="style/style.css" media="all"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
