--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
     <h1 class='name'>GORDON</h1>
     <h1 class='name'>TRAN</h1>
     <h2>Product Manager</h2>
+    <!--
+  <div class="ro">
+
+    <h2 class="rotatingText">
+      <span class="rotatingText-adjective">beautiful</span>
+      <span class="rotatingText-adjective">maintainable</span>
+      <span class="rotatingText-adjective">perfect 👌</span>
+    </h2>
     </div>
+  -->
+    </div>
+
   <!--  <p>Scroll Down >></p> -->
   <div class="graphic">
  <img class="object" id='airplane' src="images/airplane.png" alt="airplane">
@@ -100,14 +111,14 @@
     <h1 class="title">Projects</h1>
     <p id='blurb'>Here are a mix of tech and non-tech projects I have been working on!
     Feel free to reach out to me if you are curious about any of the projects I have worked on below</p>
-    <div class="sect">
+    <div id='shopo' class="sect">
     <div class="pics">
     <img class='square' src="images/logo.PNG" alt="logo of shower power">
     <div class="row">
     <a href="https://gt294.medium.com/save-the-world-one-shower-at-a-time-ideation-sprint-134ed1e75d3d" target="_blank">
     <img class='mini' src="images/medium.png" alt="medium logo">
     </a>
-    <a href="https://www.figma.com/file/GU08ydm2bJbrBU9sdsXsHi/ShoPo-Fall-2020?node-id=107%3A1120">
+    <a href="https://www.figma.com/file/GU08ydm2bJbrBU9sdsXsHi/ShoPo-Fall-2020?node-id=107%3A1120" target="_blank">
       <img class='mini' src="images/figma.png" alt="figma logo">
     </a>
     </div>
@@ -137,7 +148,7 @@
       </div>
     </div>
   -->
-    <p id='tag'>To learn more about this project, read <a href='https://gt294.medium.com/save-the-world-one-shower-at-a-time-ideation-sprint-134ed1e75d3d'>this Medium article</a> I wrote!</p>
+    <p id='tag'>To learn more about this project, read <a href='https://gt294.medium.com/save-the-world-one-shower-at-a-time-ideation-sprint-134ed1e75d3d' target="_blank">this Medium article</a> I wrote!</p>
 
     </section>
     <section>
@@ -147,7 +158,7 @@
     <div class="pics">
     <img id='IA' class='square' src="images/IA.png" alt="logo of influencer analytics">
     <div class="row">
-      <a href="https://www.linkedin.com/company/influencer-analytics/?viewAsMember=true">
+      <a href="https://www.linkedin.com/company/influencer-analytics/?viewAsMember=true" target="_blank">
     <img class='mini' src="images/linkedin.png" alt="linkedin logo">
     </a>
     </div>
@@ -156,8 +167,8 @@
     <h2>Influencer Analytics</h2>
     <p>Influncer Analytics is a Tech and Marketing Consulting project team started over the summer of 2020.
     The goal of this team is to help small businesses gain more exposure during
-  difficult times. We currently work with 3 different clients. <a href="https://open.spotify.com/show/5dPMq5KBprrYUfg36PF5Gt">Scalescape</a>, a podcast based in Hong Kong,
-    <a href="https://teespring.com/stores/craftee-space">CrafteeSpace</a>, an ecommerce brand, and <a href="http://www.phelpsforward.com/">Phelps Forward</a>, an organization that empowers female
+  difficult times. We currently work with 3 different clients. <a href="https://open.spotify.com/show/5dPMq5KBprrYUfg36PF5Gt" target="_blank">Scalescape</a>, a podcast based in Hong Kong,
+    <a href="https://teespring.com/stores/craftee-space" target="_blank">CrafteeSpace</a>, an ecommerce brand, and <a href="http://www.phelpsforward.com/" target="_blank">Phelps Forward</a>, an organization that empowers female
     first-gen students. </p>
     <!--<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT3w2K0blQKbevFdAlRp-sqRKRaoinKk0DKtxqd6ZswnaakOZqhWzuJvnulCtO7zC1i_qjr8K45Ptsc/embed?start=false&loop=false&delayms=3000" width="960" height="569" ></iframe>
 -->
@@ -173,7 +184,7 @@
      <div class="pics">
      <img id='nb' class='square' src="images/jupyter.png" alt="logo of jupyter notebook">
      <div class="row">
-       <a href="https://github.com/gt1974/Decades-Project/tree/main">
+       <a href="https://github.com/gt1974/Decades-Project/tree/main" target="_blank">
      <img class='mini' src="images/GitHub.png" alt="github logo">
      </a>
      </div>
@@ -196,22 +207,22 @@ For example, is there a clear relation between energy and loudness of songs in e
   <section id='contact'>
     <h1 class="title">Contact</h1>
     <div class="icons">
-      <a href="https://www.instagram.com/gordn.t">
+      <a href="https://www.instagram.com/gordn.t" target="_blank">
     <img class='larger' src="images/insta.png" alt="instagram">
     </a>
-    <a href="https://github.com/gt1974">
+    <a href="https://github.com/gt1974" target="_blank">
     <img class='larger' src="images/GitHub.png" alt="github">
     </a>
-    <a href="https://www.linkedin.com/in/gordon-tran-2001/">
+    <a href="https://www.linkedin.com/in/gordon-tran-2001/" target="_blank">
     <img class='larger' src="images/linkedin.png" alt="linkedin">
     </a>
-    <a href="mailto:gt294@cornell.edu">
+    <a href="mailto:gt294@cornell.edu" target="_blank">
     <img class='larger' src="images/gmail.png" alt="linkedin">
     </a>
 </div>
 <div class="end">
 <img class='gord' src="images/gordon2.jpg" alt="picture of gordon">
-<p id='reach'>If you have made it this far, I would love to connect with you. Please feel free to reach out to me! 
+<p id='reach'>If you have made it this far, I would love to connect with you. Please feel free to reach out to me!
   Easiest way would be to shoot me an email at gt294@cornell.edu</p>
 </div>
   </section>
