--- a/index.html
+++ b/index.html
@@ -167,9 +167,11 @@
     <h2>Influencer Analytics</h2>
     <p>Influncer Analytics is a Tech and Marketing Consulting project team started over the summer of 2020.
     The goal of this team is to help small businesses gain more exposure during
-  difficult times. We currently work with 3 different clients. <a href="https://open.spotify.com/show/5dPMq5KBprrYUfg36PF5Gt" target="_blank">Scalescape</a>, a podcast based in Hong Kong,
+  difficult times.
+  <!--We currently work with 3 different clients. <a href="https://open.spotify.com/show/5dPMq5KBprrYUfg36PF5Gt" target="_blank">Scalescape</a>, a podcast based in Hong Kong,
     <a href="https://teespring.com/stores/craftee-space" target="_blank">CrafteeSpace</a>, an ecommerce brand, and <a href="http://www.phelpsforward.com/" target="_blank">Phelps Forward</a>, an organization that empowers female
     first-gen students. </p>
+  -->
     <!--<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT3w2K0blQKbevFdAlRp-sqRKRaoinKk0DKtxqd6ZswnaakOZqhWzuJvnulCtO7zC1i_qjr8K45Ptsc/embed?start=false&loop=false&delayms=3000" width="960" height="569" ></iframe>
 -->
     <p>On the team, I have focused more on the technical aspects. By scraping the Instagram
