--- a/index.html
+++ b/index.html
@@ -148,11 +148,12 @@
       </div>
     </div>
   -->
-  <video controls>
+<!--  <video controls>
   <source src="videos/demo.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
-    <p id='tag'>To learn more about this project, watch the video above and read <a href='https://gt294.medium.com/save-the-world-one-shower-at-a-time-ideation-sprint-134ed1e75d3d' target="_blank">this Medium article</a> I wrote!</p>
+-->
+    <p id='tag'>To learn more about this project, read <a href='https://gt294.medium.com/save-the-world-one-shower-at-a-time-ideation-sprint-134ed1e75d3d' target="_blank">this Medium article</a> I wrote!</p>
 
     </section>
     <section>
