--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li><a href="#res">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -121,6 +121,9 @@
     <a href="https://www.figma.com/file/GU08ydm2bJbrBU9sdsXsHi/ShoPo-Fall-2020?node-id=107%3A1120" target="_blank">
       <img class='mini' src="images/figma.png" alt="figma logo">
     </a>
+    <a href="https://www.youtube.com/watch?v=cXE9ywJp8IE&ab_channel=GordonTran" target="_blank">
+      <img class='mini' src="images/youtube.png" alt="youtube logo">
+    </a>
     </div>
       </div>
     <div class="description">
@@ -153,11 +156,13 @@
 Your browser does not support the video tag.
 </video>
 -->
-<iframe
-  src="https://youtu.be/cXE9ywJp8IE">
-</iframe>
+<div class="videowrap">
+  <iframe src="https://www.youtube.com/embed/cXE9ywJp8IE"
+   allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+  gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
-    <p id='tag'>To learn more about this project, read <a href='https://gt294.medium.com/save-the-world-one-shower-at-a-time-ideation-sprint-134ed1e75d3d' target="_blank">this Medium article</a> I wrote!</p>
+    <p id='tag'>To learn more about this project, watch our pitch above and read <a href='https://gt294.medium.com/save-the-world-one-shower-at-a-time-ideation-sprint-134ed1e75d3d' target="_blank">this Medium article</a> I wrote!</p>
 
     </section>
     <section>
@@ -214,6 +219,13 @@ For example, is there a clear relation between energy and loudness of songs in e
       </div>
       </div>
   </section>
+  <section id='res'>
+    <form action="resume.html">
+        <button type="submit"> Resume </button>
+    </form>
+  <!--  <img id= 'floater' src="images/airplane.png" alt="mini airplane"> -->
+  </section>
+
 
   <section id='contact'>
     <h1 class="title">Contact</h1>
