--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
        they shower. Shower Power will time and promote the shortening of showers.
         Each successful shower that is finished within the given timeframe will hatch
      a mystery fish which users can add to their aquarium. </p>
-       <p>Over the course of three months, <a href='https://alyssazhang.me/'>Alyssa</a> and I went through the ideation
+       <p>Over the course of three months, <a href='https://alyssazhang.me/' target="_blank">Alyssa</a> and I went through the ideation
          and prototyping/desiging sprints for this project. This is the first time I have gone through the product development cycle and see one of my ideas come to life. Going through user research,
      information architecture and designing every single fish was a rewarding experience.
      We are still currently working
@@ -179,7 +179,7 @@ Your browser does not support the video tag.
     </div>
     <div class="description">
     <h2>Influencer Analytics</h2>
-    <p>Influncer Analytics is a Tech and Marketing Consulting project team started over the summer of 2020.
+    <p>Influencer Analytics is a Tech and Marketing Consulting project team started over the summer of 2020.
     The goal of this team is to help small businesses gain more exposure during
   difficult times.
   <!--We currently work with 3 different clients. <a href="https://open.spotify.com/show/5dPMq5KBprrYUfg36PF5Gt" target="_blank">Scalescape</a>, a podcast based in Hong Kong,
