added new details

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <li><strong>Hometown:</strong> Brooklyn, NY</li>
         <li><strong>Languages:</strong> Cantonese, Italian</li>
         <li><strong>Hobbies:</strong> Painting, journaling, vlogging</li>
+        <li><strong>Favorite Movies:</strong> Your Name Engraved Herein, Weathering With You</li>
         <li><strong>Favorite Shows:</strong> Start Up, Umbrella Academy</li>
         <li><strong>Favorite Games:</strong> League of Legends, Maplestory</li>
         <li><strong>Dislikes:</strong> Coconut water</li>
