--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1 class='name'>GORDON</h1>
     <h1 class='name'>TRAN</h1>
     <h2>Product Manager</h2>
-    <h2>SITE CURRENTLY UNDER CONSTRUCTION!!!</h2>
+    <h2>SITE CURRENTLY UNDER CONSTRUCTION!!! ⚠️</h2>
     <!--
   <div class="ro">
 
