--- a/index.html
+++ b/index.html
@@ -172,6 +172,31 @@ Your browser does not support the video tag.
 
     <div class="sect">
     <div class="pics">
+    <img id='twice' class='square' src="images/twice.jpeg" alt="logo of twice">
+    <div class="row">
+      <a href="https://lit-temple-07431.herokuapp.com/" target="_blank">
+    <img class='mini' src="images/heroku.png" alt="heroku logo">
+    </a>
+    </div>
+    </div>
+    <div class="description">
+    <h2>Twice Website 🤟🏻</h2>
+    <p>As a Twice fan, I built this website using HTML, CSS, SQL and PHP to let
+      users learn more about the Twice discography! Features of this site includes a gallery
+      of images that users can sort through using the tags. Authorized users can also
+      sign in, and upload, edit, delete entries. </p>
+    <p>I designed this site keeping my target audience of new Twice fans in my mind.
+      They can Dance The Night Away as they go through this site and listen to all the albums.
+      By the way I personally believe Fancy is the best Twice song 🤟🏻🤟🏻 </p>
+    <p>Check out the site <a href="https://lit-temple-07431.herokuapp.com/ ">here!</a></p>
+     </div>
+     </div>
+     </section>
+    <section>
+
+
+    <div class="sect">
+    <div class="pics">
     <img id='IA' class='square' src="images/IA.png" alt="logo of influencer analytics">
     <div class="row">
       <a href="https://www.linkedin.com/company/influencer-analytics/?viewAsMember=true" target="_blank">
@@ -192,7 +217,7 @@ Your browser does not support the video tag.
 -->
     <p>On the team, I have focused more on the technical aspects. By scraping the Instagram
     pages of ScaleScape, I was able to keep track of their growth and look at the best times to post.
-  I have also been working on designing and building the website for Influencer Analytics to share our story.</p>
+  I have also been working on designing and building a simple <a href="https://www.influenceranalytics.org/">website</a> for Influencer Analytics to share our story.</p>
      </div>
      </div>
      </section>
