--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <li><strong>Favorite Games:</strong> League of Legends, Maplestory</li>
         <li><strong>Dislikes:</strong> Coconut water</li>
       </ul>
+      <iframe id="spotify" src="https://open.spotify.com/embed/playlist/11ioGnBoPEVtz6wS65G0Fa" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
     <div class="skills">
     <div class="facts">
