--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#res">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -73,8 +74,8 @@
         <p>Here are some fun (or not so fun) facts about me:</p>
       <ul>
         <li><strong>School:</strong> Cornell University 2023</li>
-        <li><strong>Major:</strong> Information Science Concentrating in Data Science</li>
-        <li><strong>Age:</strong> 19</li>
+        <li><strong>Major:</strong> Information Science Concentrating in Interactive Tech</li>
+        <li><strong>Age:</strong> 20</li>
         <li><strong>Hometown:</strong> Brooklyn, NY</li>
         <li><strong>Languages:</strong> Cantonese, Italian</li>
         <li><strong>Hobbies:</strong> Painting, journaling, vlogging</li>
@@ -110,6 +111,7 @@
     </div>
     </div>
   </section>
+
   <section id='projects'>
     <h1 class="title">Projects</h1>
     <p id='blurb'>Here are a mix of tech and non-tech projects I have been working on!
@@ -273,7 +275,7 @@ For example, is there a clear relation between energy and loudness of songs in e
 </div>
 <div class="end">
 <img class='gord' src="images/gordon2.jpg" alt="picture of gordon">
-<p id='reach'>If you have made it this far, I would love to connect with you. Please feel free to reach out to me!
+<p id='reach'>If you have made it this far, I would love to connect with you. Please feel free to reach out to me and ask me any questions! (ie: what is info sci? which is a question I still struggle to answer whenever my mom asks)
   Easiest way would be to shoot me an email at gt294@cornell.edu</p>
 </div>
   </section>
